--- a/project4/templates/main.html
+++ b/project4/templates/main.html
@@ -5,7 +5,7 @@
         <title></title>
     </head>
     <body bgcolor="red">
-       <h1>Welcome to Django, using templates <h2>
+       <h1>Welcome to Django, using templates.. <h2>
 
     </body>
 </html>
