project4 modified and Project6, Project7 created

--- a/project4/templates/main.html
+++ b/project4/templates/main.html
@@ -4,7 +4,26 @@
         <meta charset="utf-8">
         <title></title>
     </head>
-    <body bgcolor="red">
+    <body bgcolor="skyblue">
+        <br><br><br>
+        <hr border="30" color="red" width="430px" align="left">
+        <table border="1" borderColor="white">
+            <tr>
+                <th>Sr.no</th>
+                <th>Name</th>
+                <th>Father name</th>
+                <th>Contact</th>
+                <th>Email</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Naresh</td>
+                <td>Ramaiah</td>
+                <td>8897783625</td>
+                <td>padalanari@gmail.com</td>
+            </tr>
+        </table>
+        <hr color="red" width="430px" align="left">
 
     </body>
 </html>
