--- a/project5/templates/main.html
+++ b/project5/templates/main.html
@@ -7,6 +7,9 @@
     <body>
         <table align="center" border="2">
             <tr>
+                <th>
+                    <h1> Welcome to templates</h1>
+                </th>
 
             </tr>
 
